--- a/.gitconfig
+++ b/.gitconfig
@@ -16,4 +16,32 @@
 [commit]
 	template = /Users/matsudakazuki/.stCommitMsg
 [alias]
+  ## ----------------------------------------
+  ##  checkout
+  ## ----------------------------------------
+  # 引数がない場合、branch一覧をfzfに渡してリスト表示し、選択されればcheckout
+  # 引数がある場合、特別な処理はせずgit checkout [引数]を実行
   co = "!f() { args=$@; if [ -z \"$args\" ]; then branch=$(git branch --all | grep -v HEAD | fzf  --preview 'echo {} | cut -c 3- | xargs git log --color=always' | cut -c 3-); git checkout $(echo   $branch | sed 's#remotes/[^/]*/##'); else git checkout $args; fi }; f"
+
+  ## ----------------------------------------
+  ##  diff
+  ## ----------------------------------------
+  # 引数がない場合、git statusからUntrackedなファイルも含めた差分を取得し、それをfzfに渡してリスト表示
+  # git d d1319bc2..37efebdbのように引数がある場合、git diff --name-statusから差分を取得し、それをfzfに渡してリスト表示
+  d = "!f() { args=$@; [ -z \"$args\" ] && args=HEAD; ([ \"$args\" = \"HEAD\" ] && git status --short || git diff --name-status $args | sed 's/\t/  /') | fzf --preview \"echo {} | cut -c 4- | xargs git diff --color=always $args --\" --multi --height 90% | cut -c 4-; }; f"
+
+  # git dで表示されるリストから、差分ファイルを選んでaddできるコマンド（Ctrl+iで複数選択）
+  # iTerm2のホットキーとバッティング
+  da = !git d | xargs git add --
+
+  ## ----------------------------------------
+  ##  stash
+  ## ----------------------------------------
+  # stash一覧を変更内容も含めて確認できるコマンド
+  stl = !git stash list | fzf --preview 'echo {} | grep -o stash@{.*} | xargs git stash show -p --color=always' --height 90% | grep -o stash@{.*}
+
+  # git stlで表示されるリストから、stashを選んでapplyできるコマンド
+  sta = !git stl | xargs git stash apply
+
+  # git staのdropバージョン
+  std = !git stl | xargs git stash drop
