--- a/.tigrc
+++ b/.tigrc
@@ -1,23 +1,34 @@
+# utf-8 文字で画面描画する (~でトグル)
+set line-graphics = utf-8
+
 # main viewの左端にコミットIDを表示する
 set main-view = id date author commit-title:graph=yes,refs=yes
+
+# blame view の行数表示をON、intervalを1に
+set blame-view  = date:default author:email-user id:yes,color line-number:yes,interval=1 text
+
 # 画面を垂直方向に分割する
 set vertical-split = yes
-# 水平分割したウィンドウの下画面サイズを % で指定（行数指定も可）
-set split-view-height = 80%
+
 # 差分の前後の表示行数（diff-context)を指定 
 set diff-context = 6
 
-# main-viewの左端にコミットIDを表示する
-set main-view = id date author commit-title:graph=yes,refs=yes
+# Pager系の行数表示をON、intervalを1に (default: line-number:no,interval=5)
+set pager-view  = line-number:yes,interval=1 text
+set stage-view  = line-number:yes,interval=1 text
+set log-view    = line-number:yes,interval=1 text
+set blob-view   = line-number:yes,interval=1 text
+set diff-view   = line-number:yes,interval=1 text:yes,commit-title-overflow=no
 
-# # Visualization
+# Visualization
 set id-width = 8
 set blame-options = -C -C -C
 set horizontal-scroll = 33%
 set show-notes = yes
 set show-changes = yes
+# 水平分割したウィンドウの下画面サイズを % で指定（行数指定も可）
 set split-view-height = 80%
-set status-untracked-dirs = yes
+set status-show-untracked-dirs = yes
 set tab-size = 2
 set diff-context = 3
 set ignore-space = some
@@ -25,37 +36,3 @@ set commit-order = topo
 set ignore-case = yes
 set wrap-lines = yes
 set focus-child = yes
-
-# Bind Settings
-bind generic <C-f> move-page-down
-bind generic <C-b> move-page-up
-bind generic g move-first-line
-bind main    G  none
-bind main    G  move-last-line
-bind generic G  move-last-line
-
-# revertを定義
-bind main v !?git revert %(commit)
-bind diff v !?git revert %(commit)
-bind main V !?git revert %(prompt) %(commit)
-bind diff V !?git revert %(prompt) %(commit)
-
-bind generic F none
-bind generic F !git fe # git fetch
-
-bind branch C !git co -b %(prompt) %(branch)
-bind branch P !git push origin %(branch)
-bind branch L !git pull origin %(branch)
-bind branch H !git-browse-remote %(branch)
-
-bind generic M none
-bind branch M none
-bind branch M !git merge %(branch)
-
-bind status C !git commit -v
-
-# `-` でステージ・アンステージをスイッチ
-bind status u none
-bind status - status-update
-bind stage u none
-bind stage - status-update
