--- a/.iterm2/com.googlecode.iterm2.plist
+++ b/.iterm2/com.googlecode.iterm2.plist
@@ -461,157 +461,157 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<string>0</string>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<string>0</string>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<string>0</string>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<string>0</string>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<string>0</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0.8</string>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.4823529411764706</real>
+				<string>0.2039216</string>
 				<key>Green Component</key>
-				<real>0.98039215686274506</real>
+				<string>0.8862745</string>
 				<key>Red Component</key>
-				<real>0.31372549019607843</real>
+				<string>0.5411764999999999</string>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.5490196078431373</real>
+				<string>0.3098039</string>
 				<key>Green Component</key>
-				<real>0.98039215686274506</real>
+				<string>0.9137255</string>
 				<key>Red Component</key>
-				<real>0.94509803921568625</real>
+				<string>0.9882353</string>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.97647058823529409</real>
+				<string>0.8117647</string>
 				<key>Green Component</key>
-				<real>0.57647058823529407</real>
+				<string>0.6235294</string>
 				<key>Red Component</key>
-				<real>0.74117647058823533</real>
+				<string>0.4470588</string>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.77647058823529413</real>
+				<string>0.6588235</string>
 				<key>Green Component</key>
-				<real>0.47450980392156861</real>
+				<string>0.4980392</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0.6784314</string>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99215686274509807</real>
+				<string>0.8862745</string>
 				<key>Green Component</key>
-				<real>0.9137254901960784</real>
+				<string>0.8862745</string>
 				<key>Red Component</key>
-				<real>0.54509803921568623</real>
+				<string>0.2039216</string>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<string>0.9254902</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<string>0.9333333</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0.9333333</string>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.4823529411764706</real>
+				<string>0.02352941</string>
 				<key>Green Component</key>
-				<real>0.98039215686274506</real>
+				<string>0.6039215999999999</string>
 				<key>Red Component</key>
-				<real>0.31372549019607843</real>
+				<string>0.3058824</string>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.5490196078431373</real>
+				<string>0</string>
 				<key>Green Component</key>
-				<real>0.98039215686274506</real>
+				<string>0.627451</string>
 				<key>Red Component</key>
-				<real>0.94509803921568625</real>
+				<string>0.7686275</string>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.97647058823529409</real>
+				<string>0.6431373</string>
 				<key>Green Component</key>
-				<real>0.57647058823529407</real>
+				<string>0.3960784</string>
 				<key>Red Component</key>
-				<real>0.74117647058823533</real>
+				<string>0.2039216</string>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.77647058823529413</real>
+				<string>0.4823529</string>
 				<key>Green Component</key>
-				<real>0.47450980392156861</real>
+				<string>0.3137255</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0.4588235</string>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99215686274509807</real>
+				<string>0.6039215999999999</string>
 				<key>Green Component</key>
-				<real>0.9137254901960784</real>
+				<string>0.5960785</string>
 				<key>Red Component</key>
-				<real>0.54509803921568623</real>
+				<string>0.02352941</string>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<string>0.8117647</string>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<string>0.8431373</string>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<string>0.827451</string>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.33333333333333331</real>
+				<string>0.3254902</string>
 				<key>Green Component</key>
-				<real>0.33333333333333331</real>
+				<string>0.3411765</string>
 				<key>Red Component</key>
-				<real>0.33333333333333331</real>
+				<string>0.3333333</string>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.33333333333333331</real>
+				<string>0.1607843</string>
 				<key>Green Component</key>
-				<real>0.33333333333333331</real>
+				<string>0.1607843</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0.9372549</string>
 			</dict>
 			<key>BM Growl</key>
 			<true/>
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15977837145328522</real>
+				<string>0</string>
 				<key>Green Component</key>
-				<real>0.12215272337198257</real>
+				<string>0</string>
 				<key>Red Component</key>
-				<real>0.11765811592340469</real>
+				<string>0</string>
 			</dict>
 			<key>Background Image Mode</key>
 			<integer>2</integer>
@@ -641,11 +641,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.90237069129943848</real>
+				<string>1</string>
 				<key>Green Component</key>
-				<real>0.90237069129943848</real>
+				<string>1</string>
 				<key>Red Component</key>
-				<real>0.90237069129943848</real>
+				<string>1</string>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -660,11 +660,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<string>1</string>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<string>1</string>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<string>1</string>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -682,11 +682,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<string>0</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<string>0</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0</string>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -706,12 +706,16 @@
 			<false/>
 			<key>Foreground Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.90032327175140381</real>
+				<real>1</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.90032327175140381</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.90032327175140381</real>
+				<real>1</real>
 			</dict>
 			<key>Guid</key>
 			<string>1B41506C-63E6-4C77-9452-9A02FF2804A7</string>
@@ -1057,20 +1061,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<string>0</string>
 				<key>Green Component</key>
-				<real>1</real>
+				<string>0</string>
 				<key>Red Component</key>
-				<real>1</real>
+				<string>0</string>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35294118523597717</real>
+				<string>1</string>
 				<key>Green Component</key>
-				<real>0.27843138575553894</real>
+				<string>0.8353</string>
 				<key>Red Component</key>
-				<real>0.26666668057441711</real>
+				<string>0.7098</string>
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
