--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,15 @@
 # tmux起動時のシェルをzshにする
 set-option -g default-shell /usr/local/bin/zsh
 
+# 設定ファイルをリロードする
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # tmuxを256色表示できるようにする
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
 # prefixキーをC-qに変更
-set -g prefix C-q
+set -g prefix C-t
 
 # C-bのキーバインドを解除
 unbind C-b
