--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,89 +1,108 @@
+# Hierarchy:
+#  Server
+#  ㄴSession
+#    ㄴWindow
+#      ㄴPane
+
+## ----------------------------------------
+##  basic
+## ----------------------------------------
 # tmux起動時のシェルをzshにする
-set-option -g default-shell /usr/local/bin/zsh
+set -g default-shell /usr/local/bin/zsh
+set -g default-command /usr/local/bin/zsh
 
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# tmuxを256色表示できるようにする
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+# Escキーの遅延を解消
+set -s escape-time 0
 
+# ウィンドウのインデックスを1から始める
+set -g base-index 1
+
+# ペインのインデックスを1から始める
+set -g pane-base-index 1
+
+# マウス操作を有効化
+set -g mouse on
+
+
+## ----------------------------------------
+##  Prefix key
+## ----------------------------------------
 # prefixキーをC-qに変更
 set -g prefix C-t
 
 # C-bのキーバインドを解除
 unbind C-b
 
-# ステータスバーをトップに配置する
-set-option -g status-position top
 
-# 左右のステータスバーの長さを決定する 
-set-option -g status-left-length 90
-set-option -g status-right-length 90
-
-# #P => ペイン番号
-# 最左に表示
-set-option -g status-left '#H:[#P]'
-
-# Wi-Fi、バッテリー残量、現在時刻
-# 最右に表示
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
-
-# ステータスバーを1秒毎に描画し直す
-set-option -g status-interval 1
-
-# センタライズ（主にウィンドウ番号など）
-set-option -g status-justify centre
-
-# ステータスバーの色を設定する
-set-option -g status-bg "colour238"
-
-# status line の文字色を指定する。
-set-option -g status-fg "colour255"
-
-# vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
+## ----------------------------------------
+##  Key bindings for pane operations
+## ----------------------------------------
 # | でペインを縦分割する
 bind | split-window -h
 
 # - でペインを縦分割する
 bind - split-window -v
 
-# 番号基準値を変更
-set-option -g base-index 1
+# ペインの移動
+bind -n C-o select-pane -t :.+  # 次のペインへ移動 (Ctrl + o)
+bind -n C-h select-pane -L      # 左のペインへ移動 (Ctrl + h)
+bind -n C-j select-pane -D      # 下のペインへ移動 (Ctrl + j)
+bind -n C-k select-pane -U      # 上のペインへ移動 (Ctrl + k)
+bind -n C-l select-pane -R      # 右のペインへ移動 (Ctrl + l)
 
-# マウス操作を有効にする
-set-option -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+# ペインのサイズ変更
+bind -n C-z resize-pane -Z      # 最大化する (Ctrl + z)
+bind -r H resize-pane -L 5      # 左に広げる (prefix + H)
+bind -r J resize-pane -D 5      # 下に広げる (prefix + J)
+bind -r K resize-pane -U 5      # 上に広げる (prefix + K)
+bind -r L resize-pane -R 5      # 右に広げる (prefix + L)
 
-# コピーモードを設定する
-# コピーモードでvimキーバインドを使う
-setw -g mode-keys vi
 
-# 'v' で選択を始める
-bind -T copy-mode-vi v send -X begin-selection
+## ----------------------------------------
+##  Appearrance settings
+## ----------------------------------------
+# 256色モードを有効にする
+set -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
 
-# 'V' で行選択
-bind -T copy-mode-vi V send -X select-line
+# prefixキーを押したときにステータスバーのユーザ名の色を反転させる
+set -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
 
-# 'C-v' で矩形選択
-bind -T copy-mode-vi C-v send -X rectangle-toggle
 
-# 'y' でヤンク
-bind -T copy-mode-vi y send -X copy-selection
+## ----------------------------------------
+##  Status line settings
+## ----------------------------------------
+# status line を更新する間隔を 1 秒にする
+set -g status-interval 1
 
-# 'Y' で行ヤンク
-bind -T copy-mode-vi Y send -X copy-line
+# window-status を中央揃えで配置
+set -g status-justify "centre"
 
-# 'C-p'でペースト
-bind-key C-p paste-buffer
+# ステータスバーを上部に配置
+set -g status-position top
+
+#左右のステータスバーの長さを決定
+set -g status-left-length 90
+set -g status-right-length 90
+
+# status line の背景色を指定
+set -g status-bg "colour238"
+
+# status line の文字色を指定
+set -g status-fg "colour255"
+
+# status-left のフォーマット指定
+# set -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
+
+# status-right のフォーマット指定
+# set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+
+# window-status のフォーマットを指定する。
+# set-window-option -g window-status-format " #I: #W "
+
+## カレントウィンドウの window-status のフォーマットを指定する
+# set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+
