--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,11 +71,27 @@ set -g terminal-overrides 'xterm:colors=256'
 # prefixキーを押したときにステータスバーのユーザ名の色を反転させる
 set -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
 
+# ウィンドウリストの色を設定する
+setw -g window-status-style bg="default","dim",fg="cyan"
+
+# アクティブなウィンドウを目立たせる
+setw -g window-status-current-style bg="red","bright",fg="white"
+
+# ペインボーダーの色を設定する
+# set -g pane-border-style bg="black",fg="green"
+
+# アクティブなペインを目立たせる
+set -g pane-border-style bg="yellow",fg="white"
+
+# コマンドラインの色を設定する
+set -g message-style bg="black","bright",fg="white"
+
+
 
 ## ----------------------------------------
 ##  Status line settings
 ## ----------------------------------------
-# status line を更新する間隔を 1 秒にする
+# status line を更新する間隔を1 秒にする
 set -g status-interval 1
 
 # window-status を中央揃えで配置
@@ -84,25 +100,27 @@ set -g status-justify "centre"
 # ステータスバーを上部に配置
 set -g status-position top
 
-#左右のステータスバーの長さを決定
+# 左パネル設定
 set -g status-left-length 90
+# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
+
+# 右パネル設定
 set -g status-right-length 90
+set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 
 # status line の背景色を指定
-set -g status-bg "colour238"
+set -g status-bg "#1e2132"
 
 # status line の文字色を指定
 set -g status-fg "colour255"
 
-# status-left のフォーマット指定
-# set -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
+## window-status のフォーマットを指定する。
+setw -g window-status-format " #I: #W "
 
-# status-right のフォーマット指定
-# set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+# カレントウィンドウの window-status のフォーマットを指定する
+setw -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
 
-# window-status のフォーマットを指定する。
-# set-window-option -g window-status-format " #I: #W "
-
-## カレントウィンドウの window-status のフォーマットを指定する
-# set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
-
+## ヴィジュアルノーティフィケーションを有効にする
+setw -g monitor-activity on
+set -g visual-activity on
