--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,7 +81,7 @@ setw -g window-status-current-style bg="red","bright",fg="white"
 # set -g pane-border-style bg="black",fg="green"
 
 # アクティブなペインを目立たせる
-set -g pane-border-style bg="yellow",fg="white"
+# set -g pane-border-style bg="yellow",fg="white"
 
 # コマンドラインの色を設定する
 set -g message-style bg="black","bright",fg="white"
