--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# 公式
+# https://wiki.archlinux.jp/index.php/Tmux
+
 # Hierarchy:
 #  Server
 #  ㄴSession
@@ -10,6 +13,9 @@
 # tmux起動時のシェルをzshにする
 set -g default-shell /usr/local/bin/zsh
 set -g default-command /usr/local/bin/zsh
+
+# スクロールバックバッファを10000行に設定
+set -g history-limit 10000
 
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -30,7 +36,7 @@ set -g mouse on
 ## ----------------------------------------
 ##  Prefix key
 ## ----------------------------------------
-# prefixキーをC-qに変更
+# prefixキーをC-tに変更
 set -g prefix C-t
 
 # C-bのキーバインドを解除
@@ -65,11 +71,8 @@ bind -r L resize-pane -R 5      # 右に広げる (prefix + L)
 ##  Appearrance settings
 ## ----------------------------------------
 # 256色モードを有効にする
-set -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
-
-# prefixキーを押したときにステータスバーのユーザ名の色を反転させる
-set -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
+set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
 # ウィンドウリストの色を設定する
 setw -g window-status-style bg="default","dim",fg="cyan"
@@ -94,20 +97,8 @@ set -g message-style bg="black","bright",fg="white"
 # status line を更新する間隔を1 秒にする
 set -g status-interval 1
 
-# window-status を中央揃えで配置
-set -g status-justify "centre"
-
 # ステータスバーを上部に配置
-set -g status-position top
-
-# 左パネル設定
-set -g status-left-length 90
-# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
-
-# 右パネル設定
-set -g status-right-length 90
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+# set -g status-position top
 
 # status line の背景色を指定
 set -g status-bg "#1e2132"
@@ -115,8 +106,24 @@ set -g status-bg "#1e2132"
 # status line の文字色を指定
 set -g status-fg "colour255"
 
-## window-status のフォーマットを指定する。
+# window-status を中央揃えで配置
+set -g status-justify "centre"
+
+# window-status設定
+# #I -> カレントウィンドウのインデクス
+# #W -> カレントウィンドウの名前
 setw -g window-status-format " #I: #W "
+
+# 左パネル設定
+set -g status-left-length 90
+# prefixキーを押したときにステータスバーのユーザ名の色を反転させる
+# #H -> ローカルホストのホスト名
+# #S -> セッション名
+set -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
+
+# 右パネル設定
+set -g status-right-length 90
+set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 
 # カレントウィンドウの window-status のフォーマットを指定する
 setw -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
