--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,15 +80,12 @@ setw -g window-status-style bg="default","dim",fg="cyan"
 # アクティブなウィンドウを目立たせる
 setw -g window-status-current-style bg="red","bright",fg="white"
 
-# ペインボーダーの色を設定する
-# set -g pane-border-style bg="black",fg="green"
-
 # アクティブなペインを目立たせる
-# set -g pane-border-style bg="yellow",fg="white"
+set -g pane-border-style bg="colour238",fg="colour235"
+set -g pane-active-border-style bg="colour250",fg="colour236" 
 
 # コマンドラインの色を設定する
 set -g message-style bg="black","bright",fg="white"
-
 
 
 ## ----------------------------------------
