--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,11 +14,11 @@
 set -g default-shell /usr/local/bin/zsh
 set -g default-command /usr/local/bin/zsh
 
+# prefix + r で.tmux.confをリロードする
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # スクロールバックバッファを10000行に設定
 set -g history-limit 10000
-
-# 設定ファイルをリロードする
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Escキーの遅延を解消
 set -s escape-time 0
@@ -77,12 +77,8 @@ set -g default-terminal "screen-256color"
 # ウィンドウリストの色を設定する
 setw -g window-status-style bg="default","dim",fg="cyan"
 
-# アクティブなウィンドウを目立たせる
-setw -g window-status-current-style bg="red","bright",fg="white"
-
-# アクティブなペインを目立たせる
-set -g pane-border-style bg="colour238",fg="colour235"
-set -g pane-active-border-style bg="colour250",fg="colour236" 
+# アクティブなペインのみ暗く表示（真っ黒は232）
+set -g window-active-style bg="colour16"
 
 # コマンドラインの色を設定する
 set -g message-style bg="black","bright",fg="white"
@@ -98,10 +94,7 @@ set -g status-interval 1
 # set -g status-position top
 
 # status line の背景色を指定
-set -g status-bg "#1e2132"
-
-# status line の文字色を指定
-set -g status-fg "colour255"
+# set -g status-bg "#1e2132"
 
 # window-status を中央揃えで配置
 set -g status-justify "centre"
@@ -109,22 +102,21 @@ set -g status-justify "centre"
 # window-status設定
 # #I -> カレントウィンドウのインデクス
 # #W -> カレントウィンドウの名前
-setw -g window-status-format " #I: #W "
+setw -g window-status-current-format "#[fg=color46] Window -> #I : #W"
 
 # 左パネル設定
 set -g status-left-length 90
 # prefixキーを押したときにステータスバーのユーザ名の色を反転させる
 # #H -> ローカルホストのホスト名
 # #S -> セッション名
-set -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H[#S] #[default]'
+set -g status-left '#[fg=color46]#{?client_prefix,#[reverse],} #H [session -> #S]'
 
 # 右パネル設定
 set -g status-right-length 90
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#[fg=color46]%Y-%m-%d(%a) %H:%M"
 
-# カレントウィンドウの window-status のフォーマットを指定する
-setw -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
-
-## ヴィジュアルノーティフィケーションを有効にする
+# モニターに変化があったら発信する。シンボルが@#@になる
 setw -g monitor-activity on
+
+# モニターに変化があったらステータスバーにメッセージを出す
 set -g visual-activity on
