--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,7 +77,7 @@ set -g default-terminal "screen-256color"
 # ウィンドウリストの色を設定する
 setw -g window-status-style bg="default","dim",fg="cyan"
 
-# アクティブなペインのみ暗く表示（真っ黒は232）
+# アクティブなペインのみ更に暗く表示（真っ黒は232）
 set -g window-active-style bg="colour16"
 
 # コマンドラインの色を設定する
