--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,7 +94,7 @@ set -g status-interval 1
 # set -g status-position top
 
 # status line の背景色を指定
-# set -g status-bg "#1e2132"
+set -g status-bg "#1e2132"
 
 # window-status を中央揃えで配置
 set -g status-justify "centre"
