--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,10 +75,10 @@ set -g default-terminal "tmux-256color"
 set -g default-terminal "screen-256color"
 
 # ウィンドウリストの色を設定する
-setw -g window-status-style bg="default","dim",fg="cyan"
+setw -g window-status-style bg="default","dim",fg="color46"
 
-# アクティブなペインのみ更に暗く表示（真っ黒は232）
-set -g window-active-style bg="colour16"
+# アクティブなペインをすこし明るく表示（真っ黒は232）
+set -g window-active-style bg="colour233"
 
 # コマンドラインの色を設定する
 set -g message-style bg="black","bright",fg="white"
@@ -100,16 +100,17 @@ set -g status-bg "#1e2132"
 set -g status-justify "centre"
 
 # window-status設定
-# #I -> カレントウィンドウのインデクス
 # #W -> カレントウィンドウの名前
-setw -g window-status-current-format "#[fg=color46] Window -> #I : #W"
+setw -g window-status-current-format "##"
 
 # 左パネル設定
 set -g status-left-length 90
 # prefixキーを押したときにステータスバーのユーザ名の色を反転させる
 # #H -> ローカルホストのホスト名
 # #S -> セッション名
-set -g status-left '#[fg=color46]#{?client_prefix,#[reverse],} #H [session -> #S]'
+# #I -> カレントウィンドウのインデクス
+# #W -> カレントウィンドウの名前
+set -g status-left '#[fg=color46]#{?client_prefix,#[reverse],} #H [session : #S] [Window : #I]'
 
 # 右パネル設定
 set -g status-right-length 90
