--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,7 +101,7 @@ set -g status-justify "centre"
 
 # window-status設定
 # #W -> カレントウィンドウの名前
-setw -g window-status-current-format "##"
+setw -g window-status-current-format ""
 
 # 左パネル設定
 set -g status-left-length 90
