--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,8 +77,8 @@ set -g default-terminal "screen-256color"
 # ウィンドウリストの色を設定する
 setw -g window-status-style bg="default","dim",fg="color46"
 
-# アクティブなペインをすこし明るく表示（真っ黒は232）
-set -g window-active-style bg="colour233"
+# アクティブなペインをすこし暗く表示（真っ黒は232）
+set -g window-active-style bg="color16"
 
 # コマンドラインの色を設定する
 set -g message-style bg="black","bright",fg="white"
@@ -94,7 +94,7 @@ set -g status-interval 1
 # set -g status-position top
 
 # status line の背景色を指定
-set -g status-bg "#1e2132"
+set -g status-bg "colour16"
 
 # window-status を中央揃えで配置
 set -g status-justify "centre"
