--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # 公式
 # https://wiki.archlinux.jp/index.php/Tmux
 
+# チートシート
+# https://qiita.com/nmrmsys/items/03f97f5eabec18a3a18b
+
 # Hierarchy:
 #  Server
 #  ㄴSession
@@ -20,7 +23,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # スクロールバックバッファを10000行に設定
 set -g history-limit 10000
 
-# Escキーの遅延を解消
+# Escキーの遅延を解消(ms)
 set -s escape-time 0
 
 # ウィンドウのインデックスを1から始める
@@ -85,9 +88,9 @@ set -g message-style bg="black","bright",fg="white"
 
 
 ## ----------------------------------------
-##  Status line settings
+##  Status line
 ## ----------------------------------------
-# status line を更新する間隔を1 秒にする
+# status line を更新する間隔を1秒にする
 set -g status-interval 1
 
 # ステータスバーを上部に配置
@@ -109,7 +112,6 @@ set -g status-left-length 90
 # #H -> ローカルホストのホスト名
 # #S -> セッション名
 # #I -> カレントウィンドウのインデクス
-# #W -> カレントウィンドウの名前
 set -g status-left '#[fg=color46]#{?client_prefix,#[reverse],} #H [session : #S] [Window : #I]'
 
 # 右パネル設定
